--- a/index.html
+++ b/index.html
@@ -6,8 +6,29 @@
     <title>G3 Architects</title>
     <link rel="stylesheet" href="styles/arcitect.css">
 </head>
-<body>
-    <header>
+<body class="work-sans-font">
+    <header class="bg-light">
+        <nav class="navbar display-flex">
+            <h1 class="brand">G3 Architects</h1>
+            <ul class="nav-links display-flex">
+                <li class="list-item"><a href="" class="nav-link text-gray ">Home</a></li>
+                <li class="list-item"><a href="" class="nav-link text-gray">About</a></li>
+                <li class="list-item"><a href="" class="nav-link text-gray">Contact us</a></li>
+                <li class="list-item"><a href="" class="nav-link text-gray"><button>login</button></a></li>
+            </ul>
+        </nav>
+        
+            <div class="banner">
+               <div class="banner-content">
+                <h1 class="banner-title">Brand New 
+Group of Architects 
+</h1>
+                <p class="banner-discription">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore more</button></div>
+                <img  class="banner-img" src="images/banner.png" alt="">
+
+            </div>
+       
 
     </header>
     <main>
