--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@ Group of Architects
 
     </header>
     <main>
+        <section class="team-features display display-flex">
+            <div class="features-discription">
+                <h3 class="features-title">Quick list of Our Features</h3>
+                <p class="features-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
+
+                </p>
+                <button class="btn-primary">Explore More</button>
+
+            </div>
+            <div class="image-list">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+
+            </div>
+        </section>
 
     </main>
     <footer>
