added a architecture image

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@ Group of Architects
 
     </header>
     <main>
-        <section class="team-features display display-flex">
+        <section class="team-features  display-flex">
             <div class="features-discription">
-                <h3 class="features-title">Quick list of Our Features</h3>
+                <h3 class="features-title"><span class="quick-list text-gray">Quick list</span> <span class="ours">of Our</span> <span class="features">Features</span></h3>
                 <p class="features-pera">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even
 
                 </p>
@@ -46,6 +46,42 @@ Group of Architects
                 <img src="images/team2.png" alt="">
                 <img src="images/team3.png" alt="">
                 <img src="images/team4.png" alt="">
+
+            </div>
+        </section>
+        <section class="features-summary display-flex">
+            <div class="img-show">
+                <img src="images/architect.png" alt="standing a architec female">
+                <button class="btn-primary">10+Year
+            Experience</button>
+
+            </div>
+            <div class="features-design">
+                    <div >
+                <div class="design-class"><h3 class="design-title">Features you will love & enjoy</h3>
+                <p class="design-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                
+                </div>
+                    <div >
+               <div>
+                <h4 class="summary">Dexktop & Mobile Version</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+               <div>
+                <h4 class="summary">Drag & Drop Builder</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.</p>
+               </div>
+               <div>
+                <h4 class="summary" >Awesome Modern Design</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+               </div>
+               <div>
+                <h4 class="summary">Super Easy to Edit</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised.....</p>
+               </div>
+
+                </div>
+                
 
             </div>
         </section>
