added a footer description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ Group of Architects
         <section class="features-summary display-flex">
             <div class="img-show">
                 <img src="images/architect.png" alt="standing a architec female">
-                <button class="btn-primary"> <span class="btn-class">10+Year</span><br>
+                <button id="btn-year" class="btn-primary"> <span class="btn-class">10+Year</span><br>
             Experience</button>
 
             </div>
@@ -93,22 +93,22 @@ Group of Architects
         <section class="icons display-flex">
             <div class="Awards">
                 <img src="images/icons/ribon.png" alt="madel">
-                <h3>54</h3>
+                <h3 class="number">54</h3>
                 <p>Awards Winnings</p>
             </div>
              <div class="Awards">
                 <img src="images/icons/email.png" alt="email">
-                <h3>1458</h3>
+                <h3 class="number">1458</h3>
                 <p>Project Finished</p>
             </div>
              <div class="Awards">
                 <img src="images/icons/projects.png" alt="project icon">
-                <h3>590</h3>
+                <h3 class="number">590</h3>
                 <p>Clients Worked</p>
             </div>
              <div class="Awards">
                 <img  class= "icon-img" src="images/icons/customers.png" alt="handuo">
-                <h3 class="icon-head">22578</h3>
+                <h3 class="number">22578</h3>
                 <p class="icon-pera">Email Send</p>
             </div>
         </section>
